<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">我的收入</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">请输入密码</string>
     <string name="s1">登陆</string>
      <string name="s2">取消</string>
       <string name="s3">请输入密码</string>
        <string name="s4">我的收入</string>
        <string name="s6">保存</string>
        <string name="s7">新增便签</string>
         <string name="s8"> 支出汇总</string>
          <string name="s9">  收入汇总</string>
           <string name="s10"> 便签信息</string>            
             <string name="s12"> 便签管理</string>
              <string name="s13"> 请输入便签，最多输入200字</string>
              <string name="s14"> 删除</string>
               <string name="s15"> 修改</string>
                <string name="s16"> 支出管理</string>
                 <string name="s17"> 金额:</string>
                  <string name="s18"> 时间:</string>
                   <string name="s19"> 类别:</string>
                    <string name="s20"> 付款方:</string>
                     <string name="s21"> 备  注：</string>
                       <string name="addinaccount">新增收入</string>
 
                
              
         
       
    

</resources>
